fix flexbox centering issues with gap

--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,7 @@ html, body {
     justify-content: center;
     align-items: center;
     gap: 5em;
-    padding-left: 10em;
-    padding-right: 10em;
-    padding-bottom: 3em;
+    padding-bottom: 25px;
 }
 
 
@@ -63,8 +61,9 @@ html, body {
 .result-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 5em;
     background-color: #C4DFAA;
     padding: 3em 8em;
 }
@@ -73,7 +72,6 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2em;
 }
 
 .miku {
@@ -118,7 +116,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2em;
+    gap: 3em;
 }
 
 .opp-choice {
